# arduino-dsmr-2

./: CMakeLists.txt  README.md  build-linux.sh  build-win.ps1  library.json
.github/workflows/: main.yaml
src/: .clang-format
src/arduino-dsmr-2/: encrypted_packet_accumulator.h  fields.h  packet_accumulator.h  parser.h  util.h
src/dsmr/: encrypted_packet_accumulator.h  fields.h  packet_accumulator.h  parser.h  util.h
src/test/: encrypted_packet_accumulator_example_test.cpp  encrypted_packet_accumulator_include_test.cpp  encrypted_packet_accumulator_test.cpp  example_test.cpp  packet_accumulator_example_test.cpp  packet_accumulator_include_test.cpp  packet_accumulator_test.cpp  parser_include_test.cpp  parser_test.cpp
